--- a/01.md
+++ b/01.md
@@ -69,9 +69,16 @@ Find-Package -ForceBootstrap -Name jdk8 -Provider chocolatey
 Install-Package -Name jdk8 -Force
 ```
 
-### Hello world
+### エディタのインストール
 
-はじめてのJavaに基いて、Hello worldを作成していきます。
+Window標準のメモ帳でプログラミングをするのはきびしいので、
+VisualStudioCodeを導入します。
+
+先ほどのJDKを入れたのと同様に以下のコマンドを入力することでインストール可能です。
+
+``` PowerShell
+Install-Package -Name VisualStudioCode -Force
+```
 
 ## はじめてのGit/Github
 
@@ -87,7 +94,7 @@ Install-Package -Name git.install -Force
 
 1. Github for classroomの、初回リポジトリに参加します。
 
-URLをあとでかく。
+[01回授業招待リンク](https://classroom.github.com/assignment-invitations/76c38f476e6db13ae47f0207d5339369)
 
 1. Git for bashを開き上記のリポジトリより、ソースコードの習得を行います。
 
@@ -97,8 +104,29 @@ URLをあとでかく。
     git init
     ```
 
+    * リポジトリURLの取得
+    ![github-clone](github-clone-https.png)
+
     * ソースコードの取得
 
     ``` PowerShell
-    git clone 
+    git clone [クローンしたいリポジトリ]
     ```
+1. 挙動の確認
+    ブログの内容を確認してみて下さい
+
+1. ソースコードの変更を実施
+    文言の変更やロジックの追加等をなってみてください
+
+1. 作業結果のローカルでのコミット
+
+```
+git add -A
+git commit -m "メッセージ"
+```
+
+1. ローカルコミットの反映
+
+```
+git push origin master
+```
