--- a/01.md
+++ b/01.md
@@ -22,7 +22,7 @@
 
 ## AWS環境を立ち上げる
 
-http://xxx.xxx.xxx.xxx にアクセス
+http://54.238.244.175 にアクセス
 
 1. メールアドレスを(@tama.ac.jpより前)を入れ、環境構築をします。
 1. 環境構築後メールが送付されます。
